--- a/app/src/main/res/layout/giohangitem1.xml
+++ b/app/src/main/res/layout/giohangitem1.xml
@@ -36,15 +36,21 @@
                 android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/giaspgiohang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="20000 Đ"
-                android:paddingLeft="15dp"
-                android:textColor="#BA1A3A"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+
+
+                <TextView
+                    android:id="@+id/giaspgiohang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20000 Đ"
+                    android:paddingLeft="15dp"
+                    android:textColor="#BA1A3A"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
@@ -88,7 +94,8 @@
                 <ImageView
 
                     android:layout_marginTop="10dp"
-                    android:id="@+id/xoagh1"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/xoagh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
